fixed domain name

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-url: "https://bewu.ga" # the base hostname & protocol for your site
+url: "https://bewu.dev" # the base hostname & protocol for your site
 plugins:
   - jekyll-sitemap
