--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@types/node": "20.3.1",
-    "@types/react": "^18.2.13",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "18.2.6",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -20,6 +20,9 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "sass": "^1.63.6"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "sass": "^1.77.6",
+    "tailwindcss": "^3.4.4"
   }
 }
